# juddges-app

./: .env.example  .env.rls-verify.example  .gitignore  .pre-commit-config.yaml  BRANDING_UPDATES.md  CITATION.cff  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_INGESTION_GUIDE.md  Dockerfile.analysis  FILTERING_IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_CHECKLIST.md  Makefile  PROJECT_SUMMARY.md  QUICK_START_MIGRATION.md  README.md  SECURITY.md  codemeta.json  docker-compose.dev.yml  docker-compose.transformers.yml  docker-compose.yml  docker-dev.sh  kangentic.json  mkdocs.yml  requirements-docs.txt  start-backend.sh  start-frontend.sh
backend/: Dockerfile  Dockerfile.dev  README.md  SCHEMATY_PRAWNICZE_PL.md  bulk_insert_pl.sql  celerybeat-schedule  judges_schemas_pl.json  lawyer_schemas.json  lawyer_schemas_pl.json  pyproject.toml  run_performance_tests.py  test_collections.sh  test_dashboard_weaviate.py  test_langfuse_integration.py
backend/app/: analytics.py  argumentation.py  auth.py  clustering.py  collections.py  config.py  dashboard.py  deduplication.py  documents.py  embedding_cache.py  embedding_providers.py  embeddings_api.py  error_utils.py  errors.py  evaluations.py  example_questions.py  experiments.py  extraction.py  feedback.py  guest_sessions.py  judge_fingerprint.py  langchain_cache.py  marketplace.py  models.py  ocr.py  playground.py  precedents.py  publications.py  query_analysis.py  rate_limiter.py  reasoning_lines.py  recommendations.py  reranker.py  research_assistant.py  schema_generation_agent.py  schemas.py  search_cache.py  search_intelligence.py  search_telemetry.py  sentry.py  (+9 more)
backend/app/api/: __init__.py  admin.py  audit.py  blog.py  consent.py  events.py  legal.py  research_agent.py  schema_generator.py  search.py  sso.py
backend/app/core/: __init__.py  auth_jwt.py  auth_tiers.py  embeddings.py  secrets.py  session_store.py  supabase.py
backend/app/documents_pkg/: __init__.py  citation.py  conversion.py  search.py  similarity.py  utils.py
backend/app/extraction_domain/: __init__.py  base_schema_promote.py  jobs_router.py  nl_filter_generator.py  prompts_router.py  results_router.py  shared.py
backend/app/graphql_api/: __init__.py  converters.py  router.py  schema.py  types.py
backend/app/health/: __init__.py  checks.py  models.py  router.py
backend/app/ingestion/: __init__.py  chunk_documents.py  chunk_judgments.py  embed_documents.py
backend/app/judgments_pkg/: __init__.py  conversion.py  query_attribute_parser.py  query_rewrite.py  search.py  similarity.py  utils.py
backend/app/models/: judgment_models.py
backend/app/reasoning_lines/: __init__.py  constants.py  crud.py  discovery.py  drift.py  event_detection.py  events.py  outcomes.py  schemas.py  search.py  similarity.py  timeline.py  timeline_math.py
backend/app/schemas_pkg/: __init__.py  compilation.py  crud.py  generation.py  models.py  storage.py  versioning.py
backend/app/services/: __init__.py  app_events.py  audit_service.py  facet_validation.py  meilisearch_config.py  meilisearch_embeddings.py  retention_service.py  search.py  search_analytics.py  search_cache.py  search_topics_store.py  suggestions_config.py  sync_status.py
backend/app/tasks/: __init__.py  digest_notifications.py  ingestion.py  maintenance.py  meilisearch_sync.py  reasoning_line_pipeline.py  suggestions_index.py
backend/app/utils/: __init__.py  date_utils.py  document_fetcher.py  judgment_fetcher.py  serializers.py  similarity_graph.py  validators.py
backend/docs/: BACKEND_API_REVIEW.md  SECURITY_AND_PERFORMANCE_FIXES.md  WEAVIATE_CONNECTION_POOL_ENV.md
backend/docs/explanation/: audit-trail-system.md
backend/docs/how-to/: implement-audit-logging.md
backend/docs/reference/: audit-trail-api.md
backend/examples/: call_extraction_api.py
backend/scripts/: README.md  add_factual_legal_state_properties.py  bulk_insert_schemas.py  bulk_insert_schemas_pl.py  enable_nullstate_index_for_factual_legal_state.py  fix_weaviate_schema.py  generate_lawyer_schemas.py  generate_lawyer_schemas_pl.py  import_judges_data.py  insert_schemas_to_supabase.py  inspect_datasets.py  search_benchmark.py  test_base_schema_extraction.py  test_base_schema_simple.py  test_langchain_cache.py  update_dashboard_stats.py
backend/tests/: README.md  __init__.py  conftest.py  conftest_celery.py  test_chat_history_integration.py  test_endpoints_pool.py  test_generate_release_notes.py  test_judges_extensibility.py  test_language_search.py  test_query_enhancement.py  test_weaviate_pool.py  test_weaviate_search.py
backend/tests/app/: conftest.py  test_admin.py  test_admin_ingestion.py  test_admin_integration.py  test_analytics_integration.py  test_api_key_auth.py  test_app_events.py  test_argumentation.py  test_argumentation_integration.py  test_audit_integration.py  test_audit_service.py  test_auth_integration.py  test_auth_jwt.py  test_authorization_boundaries.py  test_base_schema_promote.py  test_base_schema_route_regressions.py  test_blog_admin_integration.py  test_chunk_documents.py  test_chunk_judgments.py  test_clustering.py  test_clustering_integration.py  test_collections_batch_cap.py  test_collections_bearer_auth.py  test_collections_integration.py  test_consent_integration.py  test_dashboard_hardening.py  test_dashboard_integration.py  test_deduplication.py  test_deduplication_integration.py  test_document_fetcher.py  test_documents_crud.py  test_documents_integration.py  test_documents_list.py  test_documents_metadata.py  test_documents_search.py  test_documents_similar.py  test_embed_documents.py  test_embedding_dimension_contract.py  test_embedding_providers.py  test_embeddings_api.py  (+104 more)
backend/tests/e2e_live/: __init__.py  __main__.py  cases.py  engine.py  test_e2e_live.py
backend/tests/fixtures/: search_golden.yaml  search_queries.yaml
backend/tests/integration/: test_chunk_search_golden.py  test_hybrid_chunk_ranking.py  test_pgvector_contract.py  test_rls_policies.py  test_search_quality.py
backend/tests/performance/: conftest.py  locustfile.py  requirements.txt  (+1 more)
(+1261 files in other folders)
