[tool.poetry]
name = "juddges"
version = "1.1.0"
description = "Juddges App - AI-powered judicial decision search for Polish and UK courts"
authors = ["Lukasz Augustyniak <aisolutions@lukaszaugustyniak.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "packages/juddges_search" },
    { include = "packages/schema_generator_agent" },
    { include = "packages/research_agent" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
uvicorn = "^0.23.2"
gunicorn = "^23.0.0"
langserve = { extras = ["server"], version = "^0.3.2" }
langchain = "^0.3"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.7"
juddges_search = { path = "packages/juddges_search", develop = true }
schema_generator_agent = { path = "packages/schema_generator_agent", develop = true }
research_agent = { path = "packages/research_agent", develop = true }
langfuse = "^3.2.3"
aiohttp = "^3.11.14"
httpx = "^0.27.0"
supabase = "^2.20.0"
langgraph-checkpoint-postgres = "^2.0.23"
psycopg-binary = "^3.2.10"
celery = { extras = ["redis"], version = "^5.5.3" }
werkzeug = "^3.1.3"
slowapi = "^0.1.9"
redis = "^5.2.0"
pydantic = ">=2.11.7,<3.0.0"
litellm = "^1.78.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
sentry-sdk = { version = "^2.0.0", extras = ["fastapi"], optional = true }
strawberry-graphql = {extras = ["fastapi"], version = "^0.291.3"}

[tool.poetry.extras]
observability = ["sentry-sdk"]

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.36"
jupyterlab = "^4.3.6"
ruff = "^0.11.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
poethepoet = "^0.29.0"
mypy = "^1.19.1"
radon = "^6.0.1"
vulture = "^2.15"

[tool.poe.tasks]
# Test commands
test = "pytest tests/ -v"
test-local = { cmd = "pytest -q -rN", env = { JUDDGES_PYTEST_PROFILE = "local" } }
test-unit = "pytest tests/ -v -m unit"
test-integration = "pytest tests/ -v -m integration"
test-local-integration = { cmd = "pytest -q -rN", env = { JUDDGES_PYTEST_PROFILE = "local", RUN_INTEGRATION_TESTS = "1" } }
test-local-ai = { cmd = "pytest -q -rN", env = { JUDDGES_PYTEST_PROFILE = "local", RUN_AI_TESTS = "1" } }
test-local-legacy = { cmd = "pytest -q -rN", env = { JUDDGES_PYTEST_PROFILE = "local", RUN_LEGACY_SCHEMA_API_TESTS = "1" } }
test-local-legacy-schema-api = { cmd = "pytest -q -rN tests/app/schemas_extraction", env = { JUDDGES_PYTEST_PROFILE = "local", RUN_LEGACY_SCHEMA_API_TESTS = "1", RUN_REMOVED_LEGACY_SCHEMA_API_TESTS = "1" } }
test-cov = "pytest tests/ -m unit --cov=app --cov=juddges_search --cov=schema_generator_agent --cov-report=html --cov-report=term-missing --cov-fail-under=60"
test-cov-html = "pytest tests/ -m unit --cov=app --cov=juddges_search --cov=schema_generator_agent --cov-report=html"

# Code quality commands
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
format-check = "ruff format . --check"

# Combined commands
check = ["lint", "format-check"]
# check-all mirrors CI (`pytest -m unit`) so it can be run locally without
# requiring Supabase, Redis, or OpenAI. Use `test-integration` for the live
# suite and `test` for the full set when those services are available.
check-all = ["lint", "format-check", "test-unit"]
ci = ["lint", "format-check"]

# Search benchmark (live backend required — see scripts/search_benchmark.py)
bench-search = "python scripts/search_benchmark.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
console_output_style = "count"
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore:'enablePackrat' deprecated - use 'enable_packrat':DeprecationWarning:pyiceberg\\.expressions\\.parser",
    "ignore:'escChar' argument is deprecated, use 'esc_char':DeprecationWarning:pyiceberg\\.expressions\\.parser",
    "ignore:'unquoteResults' argument is deprecated, use 'unquote_results':DeprecationWarning:pyiceberg\\.expressions\\.parser",
    "ignore:Using `@model_validator` with mode='after' on a classmethod is deprecated.*:DeprecationWarning:pyiceberg\\.table\\.metadata",
    "ignore:The 'timeout' parameter is deprecated\\.:DeprecationWarning:supabase\\._sync\\.client",
    "ignore:The 'verify' parameter is deprecated\\.:DeprecationWarning:supabase\\._sync\\.client",
    "ignore:The 'warn' method is deprecated, use 'warning' instead:DeprecationWarning:slowapi\\.extension",
    "ignore:validate_yaml_schema\\(\\) needs refactoring\\..*:PendingDeprecationWarning:juddges_search\\.info_extraction\\.extractor",
]
markers = [
    "integration: marks tests as integration tests (require external services)",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C4", "SIM", "RET", "PTH", "PERF", "B", "S", "RUF", "TC", "FA"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (needed in tests)
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "B904",   # raise from in except (TODO: fix incrementally)
    "PTH123", # open() vs Path.open() (style preference)
    "S311",   # random module (non-security uses are fine)
    "PERF401", # list comprehension (TODO: fix incrementally)
    "S110",    # try-except-pass (TODO: add logging incrementally)
    "RUF012",  # mutable class variable (Pydantic models use this pattern)
    "S608",    # SQL string concat (only in admin scripts)
    "PTH118",  # os.path.join (sys.path manipulation needs os.path)
    "PTH120",  # os.path.dirname (sys.path manipulation needs os.path)
    "S314",    # XML parsing (xml_converter uses lxml safely)
    "S104",    # bind all interfaces (intentional for Docker)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "S106", "SIM102"]
"scripts/**/*.py" = ["S608"]
"examples/**/*.py" = ["S113"]

[tool.coverage.run]
source = ["app", "juddges_search", "schema_generator_agent"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Raise from the previous 50% gate. Set slightly below measured coverage
# so CI stays green while preventing backsliding.
fail_under = 60
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
